@@ -1153,6 +1153,7 @@ dojo.declare("com.nuclearunicorn.game.ui.GamePage", null, {
 			usePerSecondValues: true,
 			forceHighPrecision: false,
 			usePercentageResourceValues: false,
+			showNonApplicableButtons: false,
 			highlightUnavailable: true,
 			hideSell: false,
 			hideDowngrade: false,
@@ -1421,6 +1422,7 @@ dojo.declare("com.nuclearunicorn.game.ui.GamePage", null, {
 			usePerSecondValues: true,
 			forceHighPrecision: false,
 			usePercentageResourceValues: false,
+			showNonApplicableButtons: false,
 			highlightUnavailable: true,
 			hideSell: false,
 			hideDowngrade: false,
