@@ -542,6 +542,9 @@
 				<input id="usePercentageResourceValues" type="checkbox" onclick="gamePage.opts.usePercentageResourceValues = $('#usePercentageResourceValues')[0].checked;">
 				<label for="usePercentageResourceValues">Use percentage resource production values</label>
 				<br>
+				<input id="showNonApplicableButtons" type="checkbox" onclick="gamePage.opts.showNonApplicableButtons = $('#showNonApplicableButtons')[0].checked;">
+				<label for="showNonApplicableButtons">Always show trade/sacrifice/shatter buttons even if not applicable</label>
+				<br>
 				<input id="highlightUnavailable" type="checkbox" onclick="gamePage.opts.highlightUnavailable = $('#highlightUnavailable')[0].checked;">
 				<label for="highlightUnavailable">Highlight buildings limited by storage space</label>
 				<br>
