@@ -17,6 +17,7 @@ Minor:
 * Add option allowing to hide downgrade buttons
 * Fix failing load of very old save files
 * Complete description of the no confirmation” option
+* Add option allowing to always show trade/sacrifice/shatter buttons even if not applicable
 
 v 1.4.7.1 (19 apr 2020)
 Major:
